--- a/mail_template/index.html
+++ b/mail_template/index.html
@@ -15,7 +15,7 @@
       </div>
     </section>
      <section class="bottom">
-      <p class="copyright-text">Misojo ©Copyright 2024</p>
+      <p class="copyright-text">Misojo <span>&#169;</span> Copyright 2024</p>
      </section>
   </body>
 </html>
