feat(navbar): burger icon on responsive view

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>Misojo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Meta tags -->
+  <meta name="description" content="Convert PDF documents into audio files with accessibility options on our platform. Enhance document accessibility through text-to-speech technology.">
+  <meta name="keywords" content="PDF to audio, document accessibility, text-to-speech, online converter, accessibility options">
+  <meta name="author" content="Dos Weyes Programando">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Import aos css -->
